Fix BG no show due to cache issue on IE 11.  Fix font size on Select2 on IE 11.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -185,7 +185,8 @@ select:invalid { color: gray; }
 	width		: 100%;
 
 	text-align	: left;
-	font-size	: 1.2em;
+	font-family : 'Open Sans Condensed', sans-serif;
+	font-size	: 20px; /* 1.2em; */
 	font-weight	: bold;
 }
 
